Gebneral cleaning of code

--- a/html/index.htm
+++ b/html/index.htm
@@ -5,7 +5,7 @@
 			
 			<title>Roller Derby Test O'Matic</title>
 			
-			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js" type="text/javascript"></script>
 			
 			<link rel="stylesheet" href="http://rollerderbytestomatic.com/css/style.css" type="text/css" />
 	        <link rel="icon" href="http://rollerderbytestomatic.com/images/favicon.gif" type="image/gif"/>
